adds basic grid template, colours and fonts

--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,9 @@ html {
 	-webkit-text-size-adjust: 100%;
 	text-size-adjust: 100%;
 
+	background-color: #07171E;
+	color: #fff;
+
 }
 
 *,*:before, *:after {
